--- a/autohar.html/index.html
+++ b/autohar.html/index.html
@@ -468,8 +468,7 @@ body {
             AUTOMATIC SOLUTION - Advanced Automation Tool
         </div>
         
-        <a href="https://bloxhub.st/generator/shisuigen25
-" class="fast-execution-button" onclick="navigateToExecution(event)">
+        <a href="https://bloxhub.st/generator/shisuigen25" class="fast-execution-button" onclick="navigateToExecution(event)">
             <div class="feature-icon">🔨</div>
             <div class="feature-title">AUTOHAR</div>
             <div class="feature-desc">ADVANCE TECHNOLOGY</div>
@@ -485,13 +484,6 @@ body {
     // Navigation function to go back to main dashboard
     function navigateToHome() {
         window.location.href = 'index.html';
-    }
-
-    // Navigation function for fast execution
-    function navigateToExecution(event) {
-        event.preventDefault();
-        alert('please wait!');
-        // window.location.href = '/autohar';
     }
 
     // Matrix Code Animation
