--- a/autohar.html/index.html
+++ b/autohar.html/index.html
@@ -468,7 +468,7 @@ body {
             AUTOMATIC SOLUTION - Advanced Automation Tool
         </div>
         
-        <a href="https://bloxhub.st/generator/shisuigen25" class="fast-execution-button" onclick="navigateToExecution(event)">
+        <a href="https://bloxhub.st/generator/shisuigen25" class="tool-link" onclick="navigateToExecution(event)">
             <div class="feature-icon">🔨</div>
             <div class="feature-title">AUTOHAR</div>
             <div class="feature-desc">ADVANCE TECHNOLOGY</div>
