--- a/generator.html/index.html
+++ b/generator.html/index.html
@@ -507,7 +507,7 @@ body {
 <script>
     // Navigation function to go back to main dashboard
     function navigateToHome() {
-        window.location.href = 'index.html';
+        window.location.href = '/';
     }
 
     // Matrix Code Animation
